<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".PlayList">

        <TextView
            style="@style/setting"
            android:text="@string/playLists"
            android:textColor="#FFA500"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:text="@string/description"
            android:textSize="18sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:minWidth="1dp"></View>

        <ImageView
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:src="@drawable/bar" />

        <TextView
            style="@style/theme"
            android:gravity="left"
            android:text="@string/recentlyPlayed" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/auto"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:src="@drawable/auto" />

            <ImageView
                android:id="@+id/auto1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:src="@drawable/auto" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <Button
                android:id="@+id/main"
                style="@style/button"
                android:text="@string/main" />

            <Button
                android:id="@+id/playing"
                style="@style/button"
                android:text="@string/playin" />

            <Button
                android:id="@+id/player"
                style="@style/button"
                android:text="@string/player" />

            <Button
                android:id="@+id/settings"
                style="@style/button"
                android:text="@string/settings" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>