<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".NowPlaying">

        <TextView
            style="@style/setting"
            android:text="@string/nowPlaying"
            android:textColor="#FFA500"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="8dp"
            android:text="@string/playing"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:minWidth="1dp"
            android:paddingBottom="16dp"></View>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:src="@drawable/playfor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/back"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/back" />

            <ImageView
                android:id="@+id/play"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/play" />

            <ImageView
                android:id="@+id/forward"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/forward" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <Button
                android:id="@+id/main"
                style="@style/button"
                android:text="@string/main" />

            <Button
                android:id="@+id/playLists"
                style="@style/button"
                android:text="@string/playLists" />


            <Button
                android:id="@+id/player"
                style="@style/button"
                android:text="@string/player" />

            <Button
                android:id="@+id/settings"
                style="@style/button"
                android:text="@string/settings" />


        </LinearLayout>


    </LinearLayout>
</ScrollView>